<resources>
    <string name="app_name">CalorieTracker</string>
    <string name="tv_total_calorie">Put your total calorie today:</string>
    <string name="tv_weight">Put your weight (lb):</string>
    <string name="gender">Put your gender(male/female):</string>
    <string name="height">Put your height (inch):</string>
    <string name="age">Put your age:</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="bmi_status">Your BMI Weight Status is %s</string>
    <string name="bmi_fmt">BMI: %d</string>
    <string name="weigh_between_text">Your healthy weight should be between %d and %d.</string>
</resources>