<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.caldemo.CheckHealthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tv_total_calorie"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/calories_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:background="#AAAA"
            android:ems="10"
            android:inputType="number">
            <requestFocus />

        </EditText>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tv_weight"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:background="#AAAA"
            android:ems="10"
            android:inputType="number" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/gender"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/gender_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:background="#AAAA"
            android:ems="10"
            android:inputType="textShortMessage" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/height"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/height_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:background="#AAAA"
            android:ems="10"
            android:inputType="number" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/age"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/age_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:background="#AAAA"
            android:ems="10"
            android:inputType="number" >
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit" />
    </LinearLayout>
</FrameLayout>